Test containers E2E (Postgres 16) + nuevo endpoint de movimientos recientes